5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1685_2471.log
== TEST (2019-04-29 17:50:14) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print("Entradas: {} anos e IMC {}".format(idade, imc)

if (idade < 0 or idade > 130 or imc < 0):
print("Dados invalidos")
elif (idade < 45):
	if (imc < 22):
		risco = "Baixo"
	if (imc >= 22):
		risco = "Medio"
elif (idade >= 45):
	if (imc < 22)
		risco = "Medio"
	if (imc >= 22)
		risco = "Alto"

print("Risco: {}".format(risco))
-- ERROR:
File "XXXX", line 6
    if (idade < 0 or idade > 130 or imc < 0):
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:51:00) 
-- CODE:
idade = int(input("Idade: "))
imc = float(input("IMC: "))

print("Entradas: {} anos e IMC {}".format(idade, imc)

if ((idade <= 0) or (idade > 130) or (imc <= 0)):
print("Dados invalidos")
elif (idade < 45):
	if (imc < 22):
		risco = "Baixo"
	if (imc >= 22):
		risco = "Medio"
elif (idade >= 45):
	if (imc < 22)
		risco = "Medio"
	if (imc >= 22)
		risco = "Alto"

print("Risco: {}".format(risco))
-- ERROR:
File "XXXX", line 6
    if ((idade <= 0) or (idade > 130) or (imc <= 0)):
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
